Great-Books-UI/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: great-books-ui
  namespace: great-books-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: great-books-ui
  template:
    metadata:
      labels:
        app: great-books-ui
    spec:
      containers:
        - name: great-books-ui
          image: samwilk18/great-books:latest
          ports:
            - containerPort: 80
