Great-Books-UI/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: great-books-ui-service
  namespace: great-books-ui
spec:
  selector:
    app: great-books-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
